hot-fix: remove horizontal scroll on the body and main root

--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,7 @@ body,
   min-height: 100vh;
   height: fit-content;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 section>div {
